--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,104 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/* Problems found:
+button appearance (shadow)
+control better the amount of space */
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(/images/bgtile.png);
+  background-repeat: repeat-x;
+  position: 0 0;
+}
+
+h2 {
+  font-size: 30px;
+  color: #06365f;
+}
+
+p {
+  padding-top: 20px;
+  font-size: 20px;
+  width: 35vw;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 70vh;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#instagram-logo {
+  width: 20vw;
+  height: auto;
+}
+
+header button {
+  border: #1c5380d5 solid 1px;
+  box-shadow: 0.5px -0.5px 5px #1c5380;
+  background-image: linear-gradient(#1c538081, #1c5380d7);
+  background-repeat: repeat-x;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+  height: 3.8vh;
+  width: 6.6vw;
+  border-radius: 5%;
+  font-weight: 600;
+  font-size: 17px;
+}
+
+.right-side {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 40vw;
+}
+
+.info {
+  padding: 15px 30px;
+  background-image: url(/images/frame.png);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  background-size: contain;
+  border-radius: 5%;
+}
+
+.downloads {
+  padding-top: 35px;
+  display: flex;
+  justify-content: flex-start;
+  gap: 16px;
+}
+
+.footer-info {
+  padding-top: 30px;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 15px;
+  font-weight: 700;
+  color: #808080;
+}
+
+.footer-info a {
+  text-decoration: none;
+  color: #1c5380d2;
 }
