--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,14 @@ light blue: #1c5380
 /* Problems found:
 button appearance (shadow)
 control better the amount of space */
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  /* EM, REM */
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -21,13 +29,13 @@ body {
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 2rem;
   color: #06365f;
 }
 
 p {
   padding-top: 20px;
-  font-size: 20px;
+  font-size: 1.4rem;
   width: 35vw;
 }
 
@@ -36,7 +44,7 @@ main {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  height: 70vh;
+  height: 75vh;
 }
 
 header {
@@ -51,8 +59,8 @@ header {
 }
 
 header button {
-  border: #1c5380d5 solid 1px;
-  box-shadow: 0.5px -0.5px 5px #1c5380;
+  border: #1c5380d7 solid 1px;
+  box-shadow: 0.5px -0.5px 5px #1c5380d7;
   background-image: linear-gradient(#1c538081, #1c5380d7);
   background-repeat: repeat-x;
   color: white;
@@ -64,7 +72,7 @@ header button {
   width: 6.6vw;
   border-radius: 5%;
   font-weight: 600;
-  font-size: 17px;
+  font-size: 0.9rem;
 }
 
 .right-side {
@@ -91,6 +99,7 @@ header button {
 }
 
 .footer-info {
+  font-size: 1rem;
   padding-top: 30px;
   list-style: none;
   display: flex;
@@ -99,9 +108,22 @@ header button {
   gap: 15px;
   font-weight: 700;
   color: #808080;
+  text-transform: uppercase;
 }
 
 .footer-info a {
   text-decoration: none;
   color: #1c5380d2;
 }
+
+/* @media (min-width: 650px) and (max-width: 800px) {
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .left-side img {
+    visibility: hidden;
+  }
+}
+ */
