--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,118 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font: 14px/1.5 verdana, sans-serif;
+  width: 100vw;
+  height: 100vh;
+}
+.box {
+  background-image: url(/images/bgtile.png);
+  background-repeat: repeat-x;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  position: absolute;
+  flex-direction: column;
+}
+
+.container {
+  display: flex;
+  z-index: 1;
+  position: relative;
+  width: 65%;
+  height: 75%;
+}
+
+.left-side {
+  width: 40%;
+  height: 100%;
+  text-align: center;
+}
+
+.phone-image {
+  height: 100%;
+}
+
+.right-side {
+  width: 60%;
+  height: 100%;
+}
+
+.header-right {
+  display: flex;
+  justify-content: space-between;
+  height: 15%;
+  margin-bottom: 20px;
+}
+
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+  height: 35px;
+  margin-top: 20px;
+  border-top-right-radius: 2px;
+  border-top-left-radius: 2px;
+  background: linear-gradient(
+    rgb(73, 113, 149, 1) 100%,
+    rgba(73, 113, 149, 1) 100%
+  );
+}
+
+.content {
+  width: 100%;
+  height: 83%;
+  background-color: #ffffff;
+  padding: 20px;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  box-shadow: 0px -2px 13px -6px rgba(73, 71, 71, 0.75);
+  box-shadow: #1c5380;
+}
+
+.text {
+  width: 100%;
+  height: 87%;
+}
+
+.store-images {
+  width: 100%;
+  height: 13%;
+  display: flex;
+  justify-content: center;
+}
+
+footer {
+  padding-top: 30px;
+  color: #1c5380;
+  font-weight: bold;
+}
+
+ul {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 10px;
+}
+
+ul li {
+  list-style: none;
+  margin-right: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+h2 {
+  font-size: 30px;
+  color: #1c5380;
 }
