--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,64 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+header {
+  height: 25vh;
+  background-color:#1c5380;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; 
+}
+
+.logo{
+  width: 225px;
+  text-align: center;
+  margin-right: 10px;
+} 
+
+.home {
+  background-color: #1c5380;
+  color: white;
+  padding: 10px 30px;
+  border: 1px  #06365f solid;  
+}
+
+.description{
+  display:flex;
+  flex-wrap: wrap;
+}
+
+.container {
+  background-image: url('/images/frame.png');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding: 1rem 2rem;
+
+}
+
+.app {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
+
+footer li {
+  display: inline-block;
+  margin: auto;
+}
+
+footer ul, a{
+  text-decoration: none;
+  color:  #06365f;
+  
 }
