--- a/styles/style.css
+++ b/styles/style.css
@@ -7,43 +7,47 @@ light blue: #1c5380
   text-decoration: none;
   list-style: none;
 }
-body {
-  background-image: url("/images/bgtile.png");
-  background-repeat: repeat-x;
-  /* background-size: cover; */
-}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 3rem;
+  background-image: url("/images/bgtile.png");
+  background-repeat: repeat-x;
 }
+
+/* MAIN  */
 h1 {
   color: #1c5380;
+  margin-top: 4rem;
+  font-size: 28px;
+  padding-bottom: 0.4rem;
 }
 .phone-img {
   display: none;
 }
-
 .upper-bar {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   padding-top: 1.5rem;
 }
-
 .btn-login {
-  background-color: #1c5380;
-  padding: 0.3em 0.8em;
+  background: rgb(131, 160, 184);
+  background: linear-gradient(
+    180deg,
+    rgba(131, 160, 184, 0.8) 0%,
+    rgba(28, 83, 128, 1) 90%
+  );
+  border: 1px solid #06365f;
+  padding: 0.6em 2.5em;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-radius: 0.3em;
 }
-
-.login {
+.login-link {
   color: white;
   padding: 0.5em 0.7em;
 }
-
 .button-container {
   margin: 2rem 0;
 }
@@ -51,12 +55,15 @@ h1 {
   padding: 1.2rem;
 }
 .content {
-  background-image: url(/images/frame.png);
-  background-repeat: no-repeat;
-  background-size: 100%;
-  padding: 0.9rem 2rem;
   box-sizing: border-box;
 }
+.badges {
+  display: flex;
+  gap: 15px;
+  padding: 20px 0;
+}
+
+/* FOOTER */
 
 footer > ul > li {
   padding-right: 0.7em;
@@ -64,6 +71,7 @@ footer > ul > li {
 footer > ul {
   display: flex;
   flex-wrap: wrap;
+  padding-left: 20px;
 }
 .footer-links a {
   color: #1c5380;
@@ -71,13 +79,29 @@ footer > ul {
   font-weight: bold;
 }
 
+a.grey-color {
+  color: lightgray;
+}
+
+/* MEDIA QUERIES */
+
 @media (min-width: 650px) {
+  body {
+    margin: 3rem;
+  }
   main {
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 3rem;
   }
+
+  h1 {
+    margin-top: 1rem;
+    font-size: 32px;
+    padding-bottom: 0.4rem;
+  }
+
   .phone-img {
     display: block;
     padding-right: 5rem;
@@ -90,29 +114,45 @@ footer > ul {
 
   .upper-bar {
     justify-content: flex-start;
-    gap: 150px;
+    gap: 110px;
     padding-top: 0;
+    padding-bottom: 1rem;
   }
 
   .button-container {
     margin: 1rem 0;
   }
   .btn-login {
-    padding: 0.5em 1em;
+    padding: 0.3em 1em;
+    font-size: 18px;
   }
   .info-container {
     width: 40vw;
   }
 
+  .content {
+    padding: 1.2rem 4rem 0.9rem 2.5rem;
+    background-image: url(/images/frame.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
+
+  .badges img {
+    padding: 1.5rem 1rem 1rem 0;
+  }
+
   .badges {
-    padding-top: 2rem;
+    display: initial;
+    padding: 0;
   }
 
   footer {
-    margin-top: 10vh;
+    margin-top: 5vh;
   }
   footer > ul {
     flex-wrap: nowrap;
     justify-content: center;
+    gap: 25px;
+    padding-left: 0;
   }
 }
