--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,82 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+#blue {
+  background-color: #06365f;
+  opacity: 0.8;
+  width: 100%;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-home {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+}
+
+.button {
+  background-color: #1c5380;
+  border-radius: 4px;
+  height: 45px;
+}
+
+.button span {
+  color: rgb(207, 207, 222);
+  font-size: 1.1rem;
+  text-align: center;
+  font-weight: 700;
+  padding: 5px;
+}
+
+.phone-img {
+  position:absolute;
+    top: 100px;
+    left: 130px;
+}
+
+.text {
+  position: absolute;
+  background-image: url(/images/frame.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: flex;
+  flex-direction: column;
+  top: 200px;
+  width: 500px;
+  padding: 15px 25px;
+}
+
+.text p {
+  line-height: 1.5;
+  padding: 10px;
+}
+
+h1 {
+  color: #06365f;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  height: 500px;
+}
+
+ footer ul {
+  display: flex;
+  list-style-type: none;
+  text-align: center;
+  justify-content: center;
+  gap:20px;
+  color:#1c5380;
+  font-size: 0.8rem;
+  font-weight: 700;
+ }
+
+ .copyright{
+   color:grey;
+   margin-left: 30px;
+ }
