--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,140 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+@media (max-width: 800px) {
+  .body {
+    margin: auto;
+    max-width: 100%;
+  }
+  div {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: auto;
+  max-width: 100vw;
+  background-image: url(/images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+nav {
+  width: 700px;
+  margin-top: 2rem;
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  gap: 1rem;
+  list-style: none;
+}
+
+nav a {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: bold;
+}
+
+div {
+  margin-top: 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 800px) {
+  .main-div {
+    display: block;
+  }
+  .div-instagram-logo {
+    border-radius: 20px;
+  }
+  .badge-imgs {
+    flex-direction: row;
+  }
+  .instagram-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 80px;
+  }
+}
+
+.main-div {
+  margin-left: 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.column-div {
+  flex-direction: column;
+  text-align: left;
+  max-width: 500px;
+  background-color: white;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  border-radius: 0.4em;
+}
+
+.div-instagram-logo {
+  background-image: url(/images/bgtile.png);
+  background-repeat: repeat-x;
+  display: flex;
+  justify-content: space-between;
+  max-width: 100%;
+}
+
+h2 {
+  color: #1c5380;
+}
+
+.instagram-img {
+  margin-right: 6rem;
+  max-width: 100%;
+}
+
+.home-logo {
+  background-color: #5976aa;
+  padding: 10px 10px;
+  border-right: none;
+  border-left: 1px solid black;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  max-width: 100%;
+}
+
+.btn {
+  background-color: #4367a7; /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 12px 16px; /* Some padding */
+  font-size: 16px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+}
+/* button {
+  background-color: #5976AA;
+  padding: 13px 13px;
+  border-left: none;
+  border-right: 1px solid black;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  margin-right: 10px;  
+  color: white;
+  font-weight: bold;
+  text-align: left;
+  max-width: 100%;
+} */
+
+.badge-imgs {
+  gap: 2rem;
+  max-width: 100%;
+}
+
+.instagram-2014 {
+  font-weight: bold;
+  color: gray;
 }
