--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,7 @@ body {
 .button {
   background-color: #1c5380;
   border-radius: 4px;
+  border-color: #06365f;
   height: 45px;
 }
 
@@ -40,9 +41,9 @@ body {
 }
 
 .phone-img {
-  position:absolute;
-    top: 100px;
-    left: 130px;
+  position: absolute;
+  top: 100px;
+  left: 130px;
 }
 
 .text {
@@ -64,6 +65,7 @@ body {
 
 h1 {
   color: #06365f;
+  font-size: 2rem;
 }
 
 .center {
@@ -72,18 +74,18 @@ h1 {
   height: 500px;
 }
 
- footer ul {
+footer ul {
   display: flex;
   list-style-type: none;
   text-align: center;
   justify-content: center;
-  gap:20px;
-  color:#1c5380;
+  gap: 20px;
+  color: #1c5380;
   font-size: 0.8rem;
   font-weight: 700;
- }
+}
 
- .copyright{
-   color:grey;
-   margin-left: 30px;
- }
+.copyright {
+  color: grey;
+  margin-left: 30px;
+}
