--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,104 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  width: 100vw;
+  height: 100vh;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.mainSection {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-top: 3%;
+}
+
+.button {
+  background-image: url(../images/home.png),
+    linear-gradient(rgb(167, 202, 231, 0.5), rgb(63, 114, 155));
+  box-shadow: 0px 0px 5px 0.1px #06365f;
+  background-position: 10px center, 0 0;
+  background-repeat: no-repeat;
+  border-radius: 3px;
+  border-radius: 5%;
+  width: 100px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  font-size: 1.1rem;
+  color: #fff;
+  font-weight: bold;
+  padding-right: 15px;
+}
+
+.div1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  width: 34vw;
+}
+
+.div2 {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: top;
+  padding: 20px 40px 40px 40px;
+  width: 30vw;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+h1 {
+  color: #06365f;
+  font-weight: bold;
+  font-size: 1.8rem;
+}
+
+p {
+  font-size: 1.1rem;
+}
+
+.middleimg {
+  display: flex;
+  justify-content: flex-start;
+}
+
+#lastImg {
+  margin-right: 20px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  list-style: none;
+  padding-bottom: 3%;
+}
+
+li {
+  font-weight: bold;
+  padding-left: 1.5vw;
+  padding-right: 1.5vw;
+  font-size: 1.2rem;
+}
+
+#lastli {
+  color: grey;
+}
+
+a {
+  text-decoration: none;
+  color: #1c5380;
 }
