--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,29 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.phones {
+  
+}
+
+.navigation {
+  list-style: none;
+  margin: 0; 
+  background: white;
+  display: flex;
+  justify-content: center;
+  
+}
+.navigation a  {
+  text-decoration: none;
+  padding: 1em;
+  
+}
+li {
+  color: #1c5380;
+  font-size: large;
+  justify-content: space-around;
+}
+#gray {
+  color: gray;
+}
