--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,92 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x;
+  padding-right: 20px;
+  padding-top: 50px;
+}
+.banner{
+  display: flex;
+  justify-content:space-around;
+  flex-wrap: wrap;
+  align-items: center;
+  
+}
+.iphone{
+  float: left;
+  padding: 50px;
+  justify-content: flex-start;
+
+}
+ 
+.login{
+  font-weight: 500;
+  font-size: 10px;
+  color: white;
+  border-style: solid;
+  border-color: #06365f;
+  background-color: #1c5380;
+  border-width: 1px;
+  padding: 10px;
+}
+.body{
+  display: flex;
+  flex-direction: column;
+  background-image: url('../images/frame.png');
+  background-repeat: no-repeat;
+  justify-content: flex-end;
+  background-size: 100%;
+
+}
+.titles{
+  font-size: 30px;
+  color: #06365f;
+  font-weight: 200;
+  padding-top: 40px;
+  padding-left: 50px;
+}
+
+.paragraph{
+  font-size: 15px;
+  color: black;
+  font-weight:30;
+  padding-right: 50px;
+  padding-top: 20px;
+  padding-left: 50px;
+  justify-content: left;
+  
+}
+
+.apps{
+  display: flex;
+  justify-content:left;
+  padding-top: 20px;
+  align-items: flex-start;
+  margin-left: 10px;
+
+}
+.apps2{
+  margin-left: 30px;
+}
+.footer{
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  justify-content: center;
+  padding-top: 100px;
+  font-size: 13px;
+}
+.footer li{
+  list-style: none;
+  margin: 5px;
+
 }
