--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,59 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  color:blue;
+  background-image:url("/lab-css-instagram-clone/images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+#section1{
+ margin:10px 100px 10px 200px;
+  background-size:contain;
+  background-image: url("/lab-css-instagram-clone/images/frame.png");
+}
+.aside {
+  margin : 10px 70px 10px 100px; 
+ 
+}
+
+.mainHead {
+  display:flex;
+  flex-direction:row;
+}
+.picturesBlock {
+  display:flex;
+  flex-direction:row;
+}
+
+.ul {
+  list-style:none;
+  display:flex;
+  justify-content: center;
+
+}
+
+.ul li a{
+  margin:10px;
+  text-decoration:none
+}
+
+.instaText{
+  color:gray
+}
+
+.linkButton{
+  display:flex;
+  flex-direction:row;
+}
+
+.rightSide nav {
+  display:flex;
+  flex-direction:row;
 }
