--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,119 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background: url("../images/bgtile.png"); */
+  /* background: linear-gradient(#1c5380, #06365f); */
+}
+
+.wrapper {
+  max-width: 800px;
+  width: 90%;
+}
+
+.row {
+  display: flex;
+  gap: 50px;
+  padding: 5em 0 5em 0;
+}
+
+.column-main-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.main-content-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.brand-pic{
+width: 300px;
+}
+
+.home-pic {
+  width: 20px;
+  position: absolute;
+  left: 5px;
+}
+
+.login-btn {
+  padding: 7px 20px;
+  background-color: #315d81;
+  border: 1px solid #1c5380;
+  border-radius: 3px;
+  color: aliceblue;
+  font-weight:bold;
+  display: flex;
+  text-align: right;
+  font-size: 14px;
+
+}
+
+.home-login-btn {
+  position: relative;
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+}
+
+p {
+  margin-top: 10px;
+}
+
+h2 {
+color: #275983;
+}
+
+.main-content-card {
+  border: 2px solid #eee;
+  border-radius: 7px;
+  /* border-image: linear-gradient(#eee, #FFFFFF);  why doesn't work :(((*/
+  box-shadow: 2px 2px 10px 0 #eee;
+  padding: 20px;
+}
+
+.main-content-footer > img {
+  margin-left: 20px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap:20px;
+  text-transform: uppercase;
+  font-size:smaller;
+}
+
+ul {
+  list-style: none;
+  text-decoration: none;
+  font-weight:bold;
+  display: flex;
+  gap:20px;
+  color: #275983;
+}
+
+li {
+  text-decoration: none;
+  
+}
+
+.copy-right {
+  color: rgb(154, 152, 152)
 }
