--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,8 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0; 
   max-width: 100vw;
-  background-image: url(images\bgtile.png);
-  background-repeat: repeat-x;
+  background: linear-gradient(to bottom,#1C5380 0%, #1C5380 50%, white 50%, white 100%);
+ 
 }
 
 @media(max-width: 800px) {
