--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,117 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+*{
   margin: 0;
+  padding: 0;
+  /* border: 1px solid red; */
+  
+}
+body {
+  background-image:url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  background-size: 100% 420px;
+  font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.main {
+  display: flex;
+  justify-content:space-evenly;
+  /* text-align: justify; */
+} 
+.izq, .der{
+  width: 35%;
+  height: 100vh;
+  margin-top: 50px;
+  padding: 5px;
+}
+.izq{
+  display: flex;
+  justify-content: flex-end;
+}
+.der{
+  width: 50%;
+}
+
+.texto {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-shadow: 10px 0 10px #06365f;
+  border-radius: 15px;
+}
+.header{
+  width: 100%;
+  height: max-content;
+  display: flex;
+  justify-content: space-between;
+  background-color: #3A6890;
+  align-items: center;
+}
+.header > img{
+  float: left;
+  width:70%;
+  margin-bottom: 30px;
+}
+.boton{
+  border: 2px solid #06365f;
+  display: flex;
+  float: right;
+  width:fit-content;
+  font-size: x-large;
+  width: 250px;
+  height: 75px;
+  justify-content: space-around;
+  padding: 15px;
+  background: linear-gradient(180deg, #3a90d6, #345776 );
+  box-shadow:10px 0 10px #06365f;
+}
+.boton h3{
+  align-self: center;
+  float: right;
+  font-size: xx-large;
+  color: #fff;
+  font-weight: bolder;
+}
+.texto{
+  font-size: 35px;
+  margin: 0 ;
+  padding: 0;
+  height: 100%;
+}
+h2, p{
+  margin: 10px;
+  padding: 30px;
+}
+.imagenes{
+  display: flex;
+  padding-top: 160px;
+  justify-content: space-around;
+}
+.imagenes img{
+  width:45%;
+  height: auto;
+}
+.footer{
+  display: flex;
+  justify-content: center;
+  font-size: xx-large;
+  padding: 10px;
+  margin-right: 10px;
+  font-weight: 600;
+}
+.navbar {
+  margin: 0 auto;
+  display: flexbox;
+}
+ul{
+}
+li {
+  display: block;
+  float: left;
+  margin-right: 50px;
+  color: #1c6cb1;
+  margin-top: 100px;
+}
+.claro{
+  color:lightgray
 }
