--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,75 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url("IMAGES/bgTile.png") 0% 50%/cover no-repeat;
+
 }
+* {
+  box-sizing: border-box;
+}
+
+.header, .footer {
+  background-color: grey;
+  color: white;
+  padding: 15px;
+}
+
+.column {
+  float: left;
+  padding: 15px;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.menu {
+  width: 25%;
+}
+
+.content {
+  width: 75%;
+}
+
+.menu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  padding: 8px;
+  margin-bottom: 8px;
+  background-color: #33b5e5;
+  color: #ffffff;
+}
+
+
+img_phone {
+  float: left;
+}
+
+.badge_iphone {
+  float: right;
+  flex-direction: column;
+  justify-content: centre;
+  align-img2: centre;
+}
+
+. badge_android {
+  float: right;
+  flex-direction: column;
+  justify-content: centre;
+  align-img3: centre;
+}
+
+
+
+.menu li:hover {
+  background-color: #0099cc;
+}
+.style2 {font-size: 14px}
+.style4 {font-size: 10px}
+
