--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-right: 0.5vw;
 }
 
 .firstBlock__text-login{
@@ -35,19 +36,22 @@ body {
   justify-content: space-around;
   width: 4vw;
   padding: 0.4vw;
-  background-color: rgb(70, 155, 235);
+  background-color: rgb(47, 123, 194);
   border-radius: 4%;
-  border: 0.1px solid rgb(29, 126, 216);
-  box-shadow: 2px 3px 5px rgb(56, 144, 226);
+  box-shadow: 1px 1px 4px rgba(13, 89, 160, 0.671);
   color: white;
   font-weight: bold;
   cursor: pointer;
 }
 
 .firstBlock__text-content{
-  border: 0px solid white;
-  box-shadow: 0px -2px 10px black;
-  padding: 1vw;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.firstBlock__text-content-elements{
+  margin: 2vw;
 }
 
 .firstBlock__apps > img{
@@ -56,7 +60,7 @@ body {
   padding-right: 1vw;
 }
 
-.firstBlock__text-content > h2{
+.firstBlock__text-content-elements > h2{
   width: 55%;
   color:rgb(7, 69, 128);
 }
@@ -82,10 +86,25 @@ body {
   padding-right: 0.5vw;
   padding-left: 0.5vw;
   text-decoration: none;
+  color:rgb(7, 69, 128);
 }
 
 .thirdBlock__footer > *{
   font-size: 0.5vw;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+.relativeBlock{
+  position: relative;
+  height: 30vh;
+  width: 100%;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+.absoluteBlock{
+  position: absolute;
+  top: 45%;
+  width: 100%;
 }
