--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,80 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.blue {
+  height: 380px;
+  background-color: #1c5380;
+  box-sizing: border-box;
+  padding: 100px 300px
+}
+.white {
+  height: 380px;
+}
+.blue-top{
+  display: flex;
+  justify-content: space-around;
+}
+.boton{
+  width: 100px;
+  height: 40px;
+  display: flex;
+  margin-top: 20px;
+  margin-left: 50px;
+  justify-content: space-around;
+  align-items: center;
+  background: linear-gradient(to top, #1c5380, white);
+  padding: 0 5px;
+}
+.boton h3{
+ color: white;
+}
+.blue-aside{
+  display: flex;
+  flex-direction: column;
+}
+.blue-aside-icons{
+  display: flex;
+  padding: 20px 0;
+}
+.blue-aside-square{
+  height: 300px;
+  width: 425px;
+  background-color: white;
+  padding: 10px 25px;
+  border-radius: 5px;
+  box-shadow:#1c5380
+}
+.blue-aside-square h3 {
+  color: #06365f;
+  font-size: ;
+}
+.blue-down{
+  display: flex;
+  margin-left: 20px;
+}
+.blue-down img{
+  padding: 10px 10px;
+}
+
+footer{
+  width: 100%;
+  height: 100px;
+
+}
+footer ul {
+  display: flex;
+  justify-content: center;
+}
+footer ul li{
+  margin-left: 20px;
+  list-style:none;
+  color: #1c5380;
+  font-weight: 800;
+}
+.footer-grey{
+  color: grey;
 }
